# git-fixture

./: .clippy.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  schema.json
.github/: settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  post-release.yml
src/: lib.rs  main.rs  model.rs
tests/: fixtures.rs  schema.rs
tests/fixtures/: branches.yml  conflict.yml  fixup.yml  git_rebase_existing.yml  git_rebase_new.yml  pr-semi-linear-merge.yml  pr-squash.yml
tests/testsuite/: fixtures.rs  schema.rs
