[package]
name = "git-fixture"
description = "Reproducible git trees for bug reporting and testing"
version = "0.2.7"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gitext-rs/git-fixture.git"
documentation = "https://docs.rs/git-fixture"
categories = ["command-line-interface", "development-tools"]
keywords = ["git", "cli"]
edition = "2021"
rust-version = "1.60.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/gitext-rs/git-fixture/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
serde = { version = "1", features = ["derive"] }
humantime = "2"
humantime-serde = "1"
bstr = { version = "1.0", features = ["serde"] }
derive_more = "0.99.17"
eyre = "0.6"
serde_yaml = "0.8.17"
serde_json = "1.0"
schemars = { version = "0.8.11", features = ["preserve_order"] }
toml = "0.5"
assert_cmd = "2.0"
clap = { version = "4.0", features = ["derive"] }
proc-exit = "1.0"

[dev-dependencies]
snapbox = { version = "0.4.0", features = ["path"] }
