[workspace]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package]
name = "git-fixture"
description = "Reproducible git trees for bug reporting and testing"
version = "0.3.4"
repository = "https://github.com/gitext-rs/git-fixture.git"
documentation = "https://docs.rs/git-fixture"
categories = ["command-line-interface", "development-tools"]
keywords = ["git", "cli"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/gitext-rs/git-fixture/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
cli = ["dep:clap", "dep:proc-exit", "dep:humantime", "dep:env_logger"]
serde = ["dep:serde", "dep:humantime", "dep:humantime-serde"]
schema = ["dep:schemars", "json", "serde"]
yaml = ["dep:serde_yaml", "serde"]
json = ["dep:serde_json", "serde"]
toml = ["dep:toml", "serde"]

[[bin]]
name = "git-fixture"
required-features = ["cli", "yaml", "json", "toml", "schema"]

[dependencies]
serde = { version = "1.0.150", features = ["derive"], optional = true }
serde_yaml = { version = "0.8.17", optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }
humantime = { version = "2", optional = true }
humantime-serde = { version = "1", optional = true }
bstr = { version = "1.4", features = ["serde"] }
derive_more = "0.99.17"
eyre = "0.6"
schemars = { version = "0.8.12", features = ["preserve_order"], optional = true }
clap = { version = "4.2", features = ["derive"], optional = true }
proc-exit = { version = "2.0", optional = true }
env_logger = { version = "0.11.1", optional = true }
git2 = { version = ">=0.16, <=0.18", default-features = false, features = ["vendored-libgit2"] }
log = "0.4.17"

[dev-dependencies]
env_logger = "0.11.3"
snapbox = { version = "0.5.9", features = ["path"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
