[workspace]
resolver = "2"

[workspace.package]
repository = "https://github.com/gitext-rs/git-fixture.git"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
bool_assert_comparison = "allow"
branches_sharing_code = "allow"
checked_conversions = "warn"
collapsible_else_if = "allow"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_same_then_else = "allow"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_and_return = "allow"  # sometimes good to name what you are returning
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
mem_forget = "warn"
mutex_integer = "warn"
needless_continue = "allow"
needless_for_each = "warn"
negative_feature_names = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
result_large_err = "allow"
same_functions_in_if_condition = "warn"
self_named_module_files = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
uninlined_format_args = "warn"
verbose_file_reads = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
# debug = "line-tables-only"  # requires Cargo 1.71

[package]
name = "git-fixture"
description = "Reproducible git trees for bug reporting and testing"
version = "0.3.6"
documentation = "https://docs.rs/git-fixture"
categories = ["command-line-interface", "development-tools"]
keywords = ["git", "cli"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/gitext-rs/git-fixture/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
cli = ["dep:clap", "dep:proc-exit", "dep:humantime", "dep:env_logger"]
serde = ["dep:serde", "dep:humantime", "dep:humantime-serde"]
schema = ["dep:schemars", "json", "serde"]
yaml = ["dep:serde_yaml", "serde"]
json = ["dep:serde_json", "serde"]
toml = ["dep:toml", "serde"]

[[bin]]
name = "git-fixture"
required-features = ["cli", "yaml", "json", "toml", "schema"]

[dependencies]
serde = { version = "1.0.150", features = ["derive"], optional = true }
serde_yaml = { version = "0.9.0", optional = true }
serde_json = { version = "1.0.85", optional = true }
toml = { version = "0.9", optional = true }
humantime = { version = "2", optional = true }
humantime-serde = { version = "1", optional = true }
bstr = { version = "1.4", features = ["serde"] }
derive_more = { version = "2.0.0", features = ["is_variant"] }
eyre = "0.6"
schemars = { version = "1.0.0", features = ["preserve_order"], optional = true }
clap = { version = "4.2", features = ["derive"], optional = true }
proc-exit = { version = "2.0", optional = true }
env_logger = { version = "0.11.1", optional = true }
git2 = { version = ">=0.16, <=0.20", default-features = false, features = ["vendored-libgit2"] }
log = "0.4.17"

[dev-dependencies]
env_logger = "0.11.3"
snapbox = "0.6.5"
automod = "1.0.14"

[target.'cfg(any())'.dependencies]
pkg-config = "0.3.26"  # HACK: bad minimal dep in libgit2-sys
syn = "2.0.104"  # HACK: bad minimal dep in schemars

[lints]
workspace = true
